client/styles/components/_admin-console.styl
@import '../_styles'

.admin-judge-box
	lost-column 1/4
	text-align center
	
#admin-console
	.new-judge-container
		background light-grey
		padding 20px
		shadow-level(2)
    	
.console-container
	.delete-buttons
		text-align center
		button
			margin 10px 10px 20px 10px
		.reset-button
			float left
		.delete-button
			float right
		clearfix()
	.admin-top
		text-align center
	.admin-mid
		lost-center
	.admin-grid1, .admin-grid2, .admin-grid3
		lost-column 1/3
		text-align center  
	.admin-bot
		clear both
		text-align center 
		button
			margin 10px
		.in-session
			color #75ba50
	+below(750px)
		h1
			font-size 36px
		.admin-judge-box
			lost-column 1/2
		.admin-bot 
			button
				margin 5px
	+below(470px)
		.delete-buttons
			text-align center
			button
				margin 10px 5px 20px 5px
			.reset-button
				float none
			.delete-button
				float none
		.admin-grid1, .admin-grid2, .admin-grid3
			lost-column 1
		.admin-judge-box
			lost-column 1

